# aporia-network

./: README.md
core/: Cargo.toml
core/src/: lib.rs
core/src/consensus/: block_producer.rs  errors.rs  identity.rs  mod.rs  selection.rs  types.rs  validator.rs  voting.rs
core/src/consensus/test/: mod.rs
core/src/crypto/: encryption.rs  hash.rs  keys.rs  mod.rs  signature.rs  utils.rs
core/src/crypto/zk/: circuit.rs  mod.rs  params.rs  proof.rs
core/src/state/: account.rs  merkle_tree.rs  mod.rs  storage.rs  transaction.rs  transition.rs  types.rs
network/: go.mod
network/cmd/: main.go
network/pkg/api/: handlers.go  handlers_test.go  middleware.go  middleware_test.go  server.go  server_test.go
network/pkg/mempool/: handler_test.go  pool.go  pool_test.go  validation.go
network/pkg/p2p/: discovery.go  discovery_test.go  network.go  node.go  node_test.go  peer.go  protocol.go  protocol_test.go
network/pkg/types/: types.go
tools/bench/: benchmarker.py
