[package]
name = "aporia-zero-core"
version = "0.1.0"
edition = "2021"

[dependencies]
# Zero-knowledge proof libraries
ark-ff = "0.4.0"
ark-ec = "0.4.0"
ark-bls12-381 = "0.4.0"
ark-groth16 = "0.4.0"

# Cryptography
sha3 = "0.10.0"
rand = "0.8.5"
blake2 = "0.10.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Logging
log = "0.4"
env_logger = "0.9"

[dev-dependencies]
criterion = "0.4"